# greenlight

./: .editorconfig  .gitignore  .greenlight.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
pi/extensions/: greenlight.ts  pipeline-state.test.ts  pipeline-state.ts  tmp-sweep.test.ts  tmp-sweep.ts
skill/: SKILL.md
src/greenlight/: __init__.py  agent.py  cli.py  config.py  diff.py  events.py  gate.py  gitx.py  pipeline.py  render.py  util.py  worktree.py
src/greenlight/steps/: __init__.py  ci.py  intent.py  lint.py  pr.py  review.py  types.py  verify.py
tests/: fake_pi.py  test_agent_parsing.py  test_ci.py  test_cleanup.py  test_cli.py  test_config.py  test_deadline.py  test_diff.py  test_e2e.py  test_events.py  test_findings.py  test_gate.py  test_intent.py  test_pipeline_ordering.py  test_render.py  test_review_events.py  test_review_fail_closed.py  test_review_log.py  test_review_parallel.py  test_run_timeout.py  test_watch_staleness.py
